# alibabacloud-tablestore-mcp-server

./: README.md
tablestore-java-mcp-server/: README.md
tablestore-java-mcp-server-rag/: README.md
tablestore-java-mcp-server-rag/knowledge-data-generator/: chunk.py  config.py  knowledge_manager.py  pdf_to_markdown.py  requirements.txt  tablestore_vector.md
tablestore-java-mcp-server-rag/tablestore-mcp-server/: README.md  pom.xml
tablestore-java-mcp-server-rag/tablestore-mcp-server/src/main/java/com/alicloud/openservices/tablestore/sample/config/: EnvironmentSettings.java
tablestore-java-mcp-server-rag/tablestore-mcp-server/src/main/java/com/alicloud/openservices/tablestore/sample/mcp/: TablestoreMcp.java
tablestore-java-mcp-server/src/main/java/com/alicloud/openservices/tablestore/sample/mcp/: TablestoreMcp.java
tablestore-java-mcp-server/src/main/java/com/alicloud/openservices/tablestore/sample/service/: TablestoreService.java
tablestore-python-mcp-server/: README.md  pyproject.toml
tablestore-python-mcp-server/src/tablestore_mcp_server/: server.py  settings.py  tablestore_connector.py
tablestore-python-mcp-server/src/tablestore_mcp_server/embedding/: provider.py
tablestore-python-mcp-server/tests/: test_embeddings.py  test_tablestore.py
tablestore-python-mem0-mcp-server/: README.md  pyproject.toml
tablestore-python-mem0-mcp-server/src/tablestore_openmemory_mcp/: mcp_server.py  settings.py
tablestore-python-mem0-mcp-server/src/tablestore_openmemory_mcp/mem0_wheel/: mem0ai-0.1.114-py3-none-any.whl
(+5 files in other folders)
