[project]
name = "tablestore-mcp-server"
version = "0.1.0"
description = "MCP server for retrieving context from a tablestore vector database"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "mcp[cli]>=1.4.1",
    "tablestore>=6.1.0",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "llama-index>=0.12.24",
    "llama-index-embeddings-huggingface>=0.5.2",
    "llama-index-embeddings-instructor>=0.3.0",
    "llama-index-vector-stores-tablestore>=0.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
tablestore-mcp-server = "tablestore_mcp_server.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
